@@ -4,6 +4,7 @@
 # configure.
 #
 PRODUCT=BIND
+DESCRIPTION=
 MAJORVER=9
 MINORVER=8
 PATCHVER=5
